# imgui-app-template

./: .gitignore  CMakeLists.txt  Makefile  README.md  app_windows.vcxproj
android/: build.gradle
android/app/: build.gradle
src/: CMakeLists.txt  app.cpp  app.h  app.rc  helper.cpp  helper.h  main-android.cpp  main-glfwgl3.cpp  main-sdl2gl3.cpp  main-wasm.cpp  main-windows.cpp
windows/: app_windows.sln  app_windows.vcxproj
